--- a/profiles/templates/abstract/profile_base.html
+++ b/profiles/templates/abstract/profile_base.html
@@ -134,6 +134,8 @@
                 </table>
             </div>
         </div>
+    </div>
+    <div>
         <div class="m-2 mb-3">
             <div class="mx-auto border rounded d-flex flex-wrap justify-content-center" style="width: fit-content;">
                 <div class="rank m-3">
