--- a/profiles/templates/profiles/manage.html
+++ b/profiles/templates/profiles/manage.html
@@ -21,63 +21,65 @@
 {% block content %}
     {% if user == profile.created_by %}
         <div class="container">
-            <form method="post">
-            {% csrf_token %}
-                <div class="d-flex justify-content-end">
-                    {% if not profile.user.token and not profile.user.is_active %}
-                        <button class="btn btn-secondary" name="add">Token für neue/n Nutzer*in</button>
-                    {% else %}
-                        {% if not profile.user.is_active %}
-                            <table class="text-center">
-                                <tr>
-                                    {% if profile.user.token.valid_for < 1 %}
-                                        <td class="pe-3">Token abgelaufen, ohne, dass er verwendet wurde</td>
-                                        <td><button class="btn btn-secondary" name="renew">Token erneuern</button></td>
-                                    {% else %}
-                                        <td class="pe-3">
-                                            {% if profile.user.token.valid_for == 1 %}
-                                                Noch gültig für 1 Tag
-                                            {% else %}
-                                                Noch gültig für {{ profile.user.token.valid_for }} Tage
-                                            {% endif %}
-                                        </td>
-                                        <td class="pe-2"><button id="copy" class="btn btn-secondary" onclick="copy_token('{{ profile.user.token }}'); return false;">Token kopieren</button></td>
-                                        <script>
-                                            const delay = ms => new Promise(res => setTimeout(res, ms))
-                                            async function copy_token(token){
-                                                const button = document.getElementById("copy")
-                                                await navigator.clipboard.writeText(token)
-                                                button.innerHTML = "Token kopiert"
-                                                button.classList.add("active")
-                                                await delay(1500)
-                                                button.innerHTML = "Token kopieren"
-                                                button.classList.remove("active")
-                                            }
-                                        </script>
-                                    {% endif %}
-                                    <td><button class="btn btn-secondary" name="delete_token">Token löschen</button></td>
-                                </tr>
-                            </table>
+            <div class="row mb-3">
+                <h2 class="col">Berechtigungen</h2>
+                <form method="post" class="col">
+                {% csrf_token %}
+                    <div class="d-flex justify-content-end">
+                        {% if not profile.user.token and not profile.user.is_active %}
+                            <button class="btn btn-secondary" name="add">Token für neue/n Nutzer*in</button>
                         {% else %}
-                            <button class="btn btn-secondary" name="delete_user">Nutzer deaktivieren</button>
+                            {% if not profile.user.is_active %}
+                                <table class="text-center">
+                                    <tr>
+                                        {% if profile.user.token.valid_for < 1 %}
+                                            <td class="pe-3">Token abgelaufen, ohne, dass er verwendet wurde</td>
+                                            <td><button class="btn btn-secondary" name="renew">Token erneuern</button></td>
+                                        {% else %}
+                                            <td class="pe-3">
+                                                {% if profile.user.token.valid_for == 1 %}
+                                                    Noch gültig für 1 Tag
+                                                {% else %}
+                                                    Noch gültig für {{ profile.user.token.valid_for }} Tage
+                                                {% endif %}
+                                            </td>
+                                            <td class="pe-2"><button id="copy" class="btn btn-secondary" onclick="copy_token('{{ profile.user.token }}'); return false;">Token kopieren</button></td>
+                                            <script>
+                                                const delay = ms => new Promise(res => setTimeout(res, ms))
+                                                async function copy_token(token){
+                                                    const button = document.getElementById("copy")
+                                                    await navigator.clipboard.writeText(token)
+                                                    button.innerHTML = "Token kopiert"
+                                                    button.classList.add("active")
+                                                    await delay(1500)
+                                                    button.innerHTML = "Token kopieren"
+                                                    button.classList.remove("active")
+                                                }
+                                            </script>
+                                        {% endif %}
+                                        <td><button class="btn btn-secondary" name="delete_token">Token löschen</button></td>
+                                    </tr>
+                                </table>
+                            {% else %}
+                                <button class="btn btn-secondary" name="delete_user">Nutzer deaktivieren</button>
+                            {% endif %}
                         {% endif %}
-                    {% endif %}
-                </div>
-            </form>
+                    </div>
+                </form>
+            </div>
         </div>
     {% endif %}
     <div class="container">
-        <h1>Berechtigungen</h1>
         <form hx-post=""
             hx-swap="innerHTML settle:3s"
             hx-target="#success">
                 {% csrf_token %}
-                <select id="permission" name="permission" class="form-select mb-2">
+                <select id="permission" name="permission" class="form-select mb-2 mx-auto">
                     <option value="view_profile">Anzeigen</option>
                     <option value="change_profile">Bearbeiten</option>
                     <option value="manage_profile">Verwalten</option>
                 </select>
-                <input class="form-control" id="search" type="search"
+                <input class="form-control mx-auto" id="search" type="search"
                     name="search" placeholder="Benutzer*in suchen..."
                     hx-post=""
                     hx-target="#users"
@@ -92,7 +94,7 @@
             </table>
             <br>
             <input class="btn btn-secondary" type="submit" name="update" value="Speichern">
-            <span id="success"></span>
+            <span id="success" class="ms-2"></span>
             <style>
                 #success.htmx-settling {
                     opacity: 100;
