--- a/profiles/templates/profiles.html
+++ b/profiles/templates/profiles.html
@@ -17,7 +17,7 @@
 
 {% block content %}
     <div class="container">
-        <input class="form-control" type="search"
+        <input class="form-control mx-auto" type="search"
             name="search" placeholder="Profil suchen..."
             hx-post=""
             hx-trigger="input changed delay:500ms, keyup[key=='Enter'], load"
