--- a/users/templates/update.html
+++ b/users/templates/update.html
@@ -5,8 +5,8 @@
 {% block update %}active" aria-current="page{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <form method="post">
+    <div class="d-flex justify-content-center">
+        <form method="post" style="width: 27rem;">
             {% csrf_token %}
             <input type="password" class="form-control"name="pass" placeholder="aktuelles Passwort" required>
             <br>
