--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -19,7 +19,12 @@
                 <input class="form-control" type="password" name="password_repeat" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Passwort wiederholen" required>
                 <input class="btn btn-secondary mt-4" type="submit" value="Registrieren">
             {% else %}
-                <input class="form-control" type="text" name="token" placeholder="token" required>
+                {% if wrong %}
+                    <div class="alert alert-danger mx-auto" style="width: fit-content;">
+                        Diesen Token gibt es nicht, oder er ist abgelaufen
+                    </div>
+                {% endif %}
+                <input class="form-control" type="text" name="token" placeholder="Token" required>
                 <input class="btn btn-secondary mt-4" type="submit" value="Mit dem Token registrieren">
             {% endif %}
         </form>
