center submit buttons

--- a/profiles/templates/profiles/manage.html
+++ b/profiles/templates/profiles/manage.html
@@ -93,8 +93,10 @@
                 <tbody id="users"></tbody>
             </table>
             <br>
-            <input class="btn btn-secondary" type="submit" name="update" value="Speichern">
-            <span id="success" class="ms-2"></span>
+            <div class="d-flex justify-content-center">
+                <input class="btn btn-secondary" type="submit" name="update" value="Speichern">
+                <h4 id="success" class="ms-2">Gespeichert</h4>
+            </div>
             <style>
                 #success.htmx-settling {
                     opacity: 100;
