--- a/users/templates/update.html
+++ b/users/templates/update.html
@@ -8,18 +8,34 @@
     <div class="d-flex justify-content-center">
         <form method="post" style="width: 27rem;">
             {% csrf_token %}
+            {% if wrong %}
+                <div class="alert alert-danger mx-auto" style="width: fit-content;">
+                    Falsches Passwort
+                </div>
+            {% endif %}
+            <div id="pass_warn" class="alert alert-warning mx-auto d-none" style="width: fit-content;">
+                Die Passwörter stimmen nicht überein
+            </div>
             <input type="password" class="form-control"name="pass" placeholder="aktuelles Passwort" required>
             <br>
-            <input type="password" class="form-control" name="new_pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="neues Passwort" required>
+            <input id="pass1" type="password" class="form-control" name="new_pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="neues Passwort" required>
             <ul>
                 <li>mindestens 8 Zeichen</li>
                 <li>jeweils mindestens ein Groß- und Kleinbuchstabe</li>
                 <li>mindestens eine Ziffer</li>
             </ul>
-            <input type="password" class="form-control" name="new_pass_confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="neues Passwort wiederholen" required>
+            <input id="pass2" type="password" class="form-control" name="new_pass_confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="neues Passwort wiederholen" required>
             <div class="d-flex justify-content-center">
                 <input type="submit" class="btn btn-secondary mt-4" value="Passwort ändern">
             </div>
         </form>
+        <script>
+            document.querySelector("form").onsubmit = function(){
+                if (document.getElementById("pass1").value != document.getElementById("pass2").value){
+                    document.getElementById("pass_warn").classList.remove("d-none")
+                    return false
+                }
+            }
+        </script>
     </div>
 {% endblock %}
