--- a/profiles/templates/profiles.html
+++ b/profiles/templates/profiles.html
@@ -23,7 +23,7 @@
             hx-trigger="input changed delay:500ms, keyup[key=='Enter'], load"
             hx-target="#profiles"
             hx-headers='{"X-CSRFTOKEN": "{{ csrf_token }}"}'>
-        <table class="table">
+        <table class="table mx-auto mt-4" style="max-width: 40rem;">
             <thead>
                 <th>Name</th>
                 <th></th>
