--- a/users/templates/users.html
+++ b/users/templates/users.html
@@ -14,26 +14,28 @@
 
 {% block content %}
     <div class="container">
-        <select id="type" name="type" class="form-select mb-2 mx-auto">
-            <option value="">Alle</option>
-            <option value="a" selected>Aktive</option>
-            <option value="au">Aktive Judoka</option>
-            <option value="at">Aktive Trainer*innen</option>
-            <option value="i">Inaktive</option>
-            <option value="iu">Inaktive Judoka</option>
-            <option value="it">Inaktive Trainer*innen</option>
-        </select>
+        <div class="d-flex justify-content-center mx-auto" style="width: 32rem;">
+            <select id="status" name="status" class="form-select mb-2 me-2 d-inline" style="width: max-content;">
+                <option value="">Alle</option>
+                <option value="a" selected>Aktiv</option>
+                <option value="i">Inaktiv</option>
+            </select>
+            <select id="type" name="type" class="form-select mb-2 d-inline" style="width: max-content;">
+                <option value="" selected>Alle</option>
+                <option value="u">Judoka</option>
+                <option value="t">Trainer*in</option>
+            </select>
+        </div>
         <input class="form-control mx-auto" type="search"
             name="search" placeholder="Benutzer*in suchen..."
             hx-post=""
-            hx-trigger="input changed delay:500ms, keyup[key=='Enter'], change from:#type, load"
+            hx-trigger="input changed delay:500ms, keyup[key=='Enter'], change from:#type, change from:#status, load"
             hx-target="#users"
-            hx-include="#type"
+            hx-include="#type, #status"
             hx-headers='{"X-CSRFTOKEN": "{{ csrf_token }}"}'>
-        <table class="table align-middle">
+        <table class="table align-middle mx-auto mt-4" style="max-width: 40rem;">
             <thead>
                 <th>Benutzername</th>
-                <th></th>
                 <th></th>
             </thead>
             <tbody id="users">
