--- a/profiles/templates/profiles/edit.html
+++ b/profiles/templates/profiles/edit.html
@@ -13,7 +13,7 @@
         <a class="nav-link" href="{% url "profiles-profile-manage" profile.user.username %}">Verwalten</a>
     {% endif %}
     {% if request.user == profile.created_by %}
-        <button class="nav-link" onclick="if (confirm('Profil wirklich unwiederruflich löschen?')){ post_data('delete') }">Löschen</button>
+    <button class="nav-link" onclick="if (confirm('Profil wirklich unwiederruflich löschen?\n{% if profile.user.is_active %}Der/Die Nutzer*in {{ profile.user.username }}\nwird nie wieder ein Profil haben können.{% endif %}')){ post_data('delete') }">Löschen</button>
     {% endif %}
     <input class="nav-link" type="submit" form="profile_form" data-type="save" value="Speichern">
     <input class="nav-link" type="submit" form="profile_form" value="Fertig">
