--- a/profiles/templates/profiles/manage.html
+++ b/profiles/templates/profiles/manage.html
@@ -22,7 +22,7 @@
     {% if user == profile.created_by %}
         <div class="container">
             <div class="row mb-3">
-                <h2 class="col">Berechtigungen</h2>
+            <h2 class="col">Zugriff zum Profil von {{ profile.name }}</h2>
                 <form method="post" class="col">
                 {% csrf_token %}
                     <div class="d-flex justify-content-end">
@@ -60,8 +60,6 @@
                                         <td><button class="btn btn-secondary" name="delete_token">Token löschen</button></td>
                                     </tr>
                                 </table>
-                            {% else %}
-                                <button class="btn btn-secondary" name="delete_user">Nutzer deaktivieren</button>
                             {% endif %}
                         {% endif %}
                     </div>
