--- a/profiles/templates/abstract/profile_base.html
+++ b/profiles/templates/abstract/profile_base.html
@@ -139,19 +139,19 @@
         <div class="m-2 mb-3">
             <div class="mx-auto border rounded d-flex flex-wrap justify-content-center" style="width: fit-content;">
                 <div class="rank m-3">
-                    <table id="special_rank" class="table table-borderless caption-top">
+                    <table id="special_rank" class="table table-borderless caption-top mb-0">
                         <caption class="text-center">Spezialtechniken</caption>
                         {% block special %}{% endblock %}
                     </table>
                 </div>
                 <div class="rank m-3">
-                    <table id="ground_rank" class="table table-borderless caption-top">
+                    <table id="ground_rank" class="table table-borderless caption-top mb-0">
                         <caption class="text-center">Bodentechniken</caption>
                         {% block ground %}{% endblock %}
                     </table>
                 </div>
                 <div class="rank m-3">
-                    <table id="combination_rank" class="table table-borderless caption-top">
+                    <table id="combination_rank" class="table table-borderless caption-top mb-0">
                         <caption class="text-center">Kombinationen</caption>
                         {% block combination %}{% endblock %}
                     </table>
