--- a/profiles/templates/profiles/new.html
+++ b/profiles/templates/profiles/new.html
@@ -93,16 +93,16 @@
 
 {% block special %}
     <tr>
-        <td id="special1" class="special"></td>
+        <td id="special1" class="special d-none"></td>
     </tr>
     <tr>
-        <td id="special2" class="special"></td>
+        <td id="special2" class="special d-none"></td>
     </tr>
     <tr>
-        <td id="special3" class="special"></td>
+        <td id="special3" class="special d-none"></td>
     </tr>
     <tr>
-        <td id="special4" class="special"></td>
+        <td id="special4" class="special d-none"></td>
     </tr>
     <tr>
         <td class="d-flex justify-content-center">
@@ -113,16 +113,16 @@
 
 {% block ground %}
     <tr>
-        <td id="ground1" class="ground"></td>
+        <td id="ground1" class="ground d-none"></td>
     </tr>
     <tr>
-        <td id="ground2" class="ground"></td>
+        <td id="ground2" class="ground d-none"></td>
     </tr>
     <tr>
-        <td id="ground3" class="ground"></td>
+        <td id="ground3" class="ground d-none"></td>
     </tr>
     <tr>
-        <td id="ground4" class="ground"></td>
+        <td id="ground4" class="ground d-none"></td>
     </tr>
     <tr>
         <td class="d-flex justify-content-center">
@@ -133,16 +133,16 @@
 
 {% block combination %}
     <tr>
-        <td id="combination1" class="combination"></td>
+        <td id="combination1" class="combination d-none"></td>
     </tr>
     <tr>
-        <td id="combination2" class="combination"></td>
+        <td id="combination2" class="combination d-none"></td>
     </tr>
     <tr>
-        <td id="combination3" class="combination"></td>
+        <td id="combination3" class="combination d-none"></td>
     </tr>
     <tr>
-        <td id="combination4" class="combination"></td>
+        <td id="combination4" class="combination d-none"></td>
     </tr>
     <tr>
         <td class="d-flex justify-content-center">
